tests/errors/syn.expected-then-or-open-brace.branch-if-post-condition.or
main :: () -> void {
    if true x;
};
